welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:38: error: ';' expected but ')' found.
  gauche)
        ^